# thesis-project

./: .gitattributes  .gitignore  .mdformat.toml  AGENTS.md  AGENT_CONTRACT.md  CLAUDE.md  README.md  nextflow.config  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  run_demo.sh  run_tests.sh
configs/: demo_task.json  llm_providers.json  model_providers.json
docs/algorithm-and-llm/: algorithm-read.md  core-algorithm-define.md  llm-read.md  train-llm.md
docs/demo/: README.md
docs/design/: MAINTAINABILITY.md  agent-design.md  architecture.md  core-algorithm-spec.md  de-novo-workflow.md  demo-visualization-poc.md  hitl-extension.md  system-implementation-design.md  test.md  tools-catalog.md
docs/impl/: implementation_index.md  llm_provider_guide.md  remote_model_invocation.md  snapshot-recovery.md
docs/index/: DUPLICATION_AUDIT.md  SECTION_CONTRACT.md  SSOT_MAP.md  index.json  index.md  topic_views.json
docs/proposal/: main.tex
docs/proposal-fix/: proposal.odt
examples/: CANDIDATE_SET_OUTPUT_V1.md  README_DEMO.md  demo_esmfold_end_to_end.py  esmfold_manual_test.py  planner-score-gate.md  remote_esmfold_example.py
nf/: main.nf
nf/modules/: README.md  esmfold.nf
paper/: README.md
paper/bib/: references.bib
plan/: index(1.14-2.03).md  index(12.26-1.13).md  index(2.04-2.24).md  index(3.02-3.23).md  index.md
scripts/: README.md  compare_providers.py  demo_visualization_poc.py  docslice  generate_denovo_report_demo.py  run_demo.py  test_docslice.sh
services/plm_rest_server/: README.md  __init__.py  (+4 more)
tests/: README.md  conftest.py
(+133 files in other folders)
