[project]
name = "thesis-project"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
  "annotated-doc==0.0.4",
  "annotated-types==0.7.0",
  "anyio==4.12.1",
  "fastapi==0.128.0",
  "idna==3.11",
  "iniconfig==2.3.0",
  "packaging==25.0",
  "pluggy==1.6.0",
  "pydantic==2.12.5",
  "pydantic_core==2.41.5",
  "Pygments==2.19.2",
  "pytest==9.0.2",
  "starlette==0.50.0",
  "typing-inspection==0.4.2",
  "typing_extensions==4.15.0",
  "openai",
  "httpx",
  "biopython>=1.86",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
